--- a/finance-exporter.yaml
+++ b/finance-exporter.yaml
@@ -1,6 +1,5 @@
 ---
 port: 8000
-address: 0.0.0.0
 metric_prefix: finance
 min_interval: 15
 # If set, each ticker will load labels from each source
@@ -14,48 +13,14 @@ tickers:
   - GOOG
 
 sources:
-  - name: iexcloud
-    interval: 60
-    plugin: iexcloud
-    api_key: demo
-    metrics:
-      current_price:
-        item: iexRealtimePrice
-        type: Gauge
-        help: Current Market Price of Asset
-      change:
-        item: changePercent
-        type: Gauge
-        help: P/C Since Open
-      change_ytd:
-        item: ytdChange
-        type: Gauge
-        help: P/C Year-to-Date
-      volume:
-        item: iexVolume
-        type: Gauge
-        help: Current Market Volume
-      previous_volume:
-        item: previousVolume
-        type: Gauge
-        help: Previous Volume
-      avg_volume:
-        item: avgTotalVolume
-        type: Gauge
-        help: Average Volume
-      pe_ratio:
-        item: peRatio
-        type: Gauge
-        help: Price-to-Earnings Ratio
-
   - name: yahoo
     interval: 300
     plugin: yfinance
     metrics:
-      #current_price:
-      #  item: regularMarketPrice
-      #  type: Gauge
-      #  help: Current Market Price of Asset
+      current_price:
+        item: currentPrice
+        type: Gauge
+        help: Current Market Price of Asset
       open_price:
         item: regularMarketOpen
         type: Gauge
@@ -84,14 +49,14 @@ sources:
         item: targetMedianPrice
         type: Gauge
         help: Target Price (Median)
-        #volume:
-        #  item: regularMarketVolume
-        #  type: Gauge
-        #  help: Current Market Volume
-        #avg_volume:
-        #  item: averageVolume
-        #  type: Gauge
-        #  help: Average Volume
+      volume:
+        item: regularMarketVolume
+        type: Gauge
+        help: Current Market Volume
+      avg_volume:
+        item: averageVolume
+        type: Gauge
+        help: Average Volume
       avg_10day_volume:
         item: averageDailyVolume10Day
         type: Gauge
